@@ -1,3 +1,12 @@
+2005-08-30  Yves Combe,,,  <set EMAIL_ADDRESS environment variable>
+
+	use pango metrics to determine interline in reading, and pango text markup to make black square in last word.
+	change font in memory, to avoid confusion between uppercased i and lowercased L. Set to "Serif bold 28" in source, should be passed through skin.
+
+	* src/boards/memory.c: (create_item):
+	* src/boards/reading.c: (start_board), (reading_next_level),
+	(reading_create_item):
+
 2005-08-30  Bruno coudoin  <bruno.coudoin@free.fr>
 
         - added continent voices for french by Julien Gilles
